# mtgs

./: .gitignore  .pre-commit-config.yaml  GCN_TODO.md  LLM_TODO.md  README.md  VLM_TODO.md  diff.md  equation.md  pyproject.toml  requirements.txt
.claude/: CLAUDE.md  architecture.md  config.md  datasets.md  demo_pipeline.md  gaze_graph_math.md  interaction_module.md  version.md
docs/: paper_plan_aaai2026.md
mtgs/: __init__.py  experiments.py
overleaf/: citation.md  paper.md  references.bib
scripts/: build_vlm_cache.sh  build_vlm_n4_cache.sh  demo.py  demo.sh  eval_vlm.sh  eval_vlm.sh.orig  eval_vlm_balanced.sh  eval_vlm_pair.sh  export_mtgs_baseline.sh  export_mtgs_origin.sh  extract_vlm_features.py  extract_vlm_features.sh  graph_extract.sh  main.py  main_vlm.py  metric.sh  test_gazefollow.sh  test_vat.sh  test_vsgaze.sh  train_gazefollow.sh  train_postgraph.sh  train_vlm.sh  train_vlm.sh.orig  train_vlm_align.sh  train_vlm_frame.sh  train_vlm_mp.sh  train_vlm_pair.sh  train_vsgaze.sh
tests/: test_gaze_graph_rowcol_ablation.py  test_gaze_qa.py  test_graph_tokenizer.py  test_memory_attn.py  test_vlm_boundary.py  test_vlm_legacy_overlay.py  test_vlm_manifest_generator.py  test_vlm_overlay.py  test_vlm_pair_dataset.py  test_vlm_pair_eval.py  test_vlm_pair_features.py  test_vlm_pair_generative.py  test_vlm_pair_head.py  test_vlm_pair_input.py  test_vlm_pair_model.py  test_vlm_pair_projection.py  test_vlm_pair_prompt.py  test_vlm_pair_train.py  test_vlm_people_selection.py  test_vlm_social_data.py  test_vlm_social_evaluation.py  test_vlm_social_evidence.py  test_vlm_social_generative.py  test_vlm_social_input.py  test_vlm_social_model.py  test_vlm_social_objective.py  test_vlm_social_projection.py  test_vlm_social_prompt.py  test_vlm_social_routing_train_settings.py  test_vlm_social_training.py  test_vlm_social_training_frame_ids.py  test_vlm_surface.py  test_vlm_token_injection.py  test_vlm_token_prompt.py  test_vlm_trainer_hook.py  test_vlm_vision_cache.py
vlm/: README.md  __init__.py  _analyze_blends.py  _diag_frame.py  _dump_logits.py  cfg.py  data_prep.py  dataset.py  eval.py  eval_pair.py  evaluate.py  frame_dataset.py  train.py  (+21 more)
(+118 files in other folders)
