[tool.poetry]
name = "mtgs"
version = "0.1.0"
description = ""
authors = ["anshul gupta <anshul.gupta@idiap.ch>"]
license = "GPL-3.0-only"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
hydra-core = "^1.3.2"
numpy = "1.24.4"
opencv-python = "4.9.0.80"
matplotlib = "3.7.1"
boxmot = "10.0.51"
omegaconf = "2.3.0"
pandas = "1.4.2"
pillow = "10.2.0"
pytorch-lightning = "2.4.0"
torch =  { version = "2.4.1+cu121", source = "pytorch-cu121" }
lightning = "2.0.9"
tqdm = "4.67.1"
einops = "0.6.0"
wandb = "0.15.1"
torchvision = { version = "0.19.1+cu121", source = "pytorch-cu121" }
pyyaml = "6.0.2"
timm = "0.9.2"
torch-geometric = "2.3.1"
scikit-learn = "1.3.2"
torchmetrics = "1.5.2"
thop ="0.1.*"
requests = "2.32.3"

[[tool.poetry.source]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
default = "false"


[tool.poetry.group.dev.dependencies]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
